Refactor tender logic (remove TENDER_CLOSED event)